--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -74,9 +74,9 @@
   "homepage": "https://github.com/web-std/io",
   "devDependencies": {
     "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-string": "^1.4.2",
+    "@types/mocha": "^9.1.0",
     "abort-controller": "^3.0.0",
     "abortcontroller-polyfill": "^1.7.1",
     "busboy": "^0.3.1",
@@ -93,16 +93,17 @@
     "p-timeout": "^3.2.0",
     "rollup": "^2.26.10",
     "tsd": "^0.13.1",
-    "xo": "^0.33.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "xo": "^0.33.1"
   },
   "dependencies": {
     "@web-std/blob": "^3.0.3",
+    "@web-std/file": "^3.0.2",
     "@web-std/form-data": "^3.0.2",
     "@web-std/stream": "^1.0.1",
+    "@web3-storage/multipart-parser": "^1.0.0",
     "data-uri-to-buffer": "^3.0.1",
-    "mrmime": "^1.0.0",
-    "@web3-storage/multipart-parser": "^1.0.0"
+    "mrmime": "^1.0.0"
   },
   "esm": {
     "sourceMap": true,
