--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -78,6 +78,7 @@
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-string": "^1.4.2",
     "abort-controller": "^3.0.0",
+    "@web-std/file": "^3.0.2",
     "abortcontroller-polyfill": "^1.7.1",
     "busboy": "^0.3.1",
     "c8": "^7.3.0",
@@ -97,9 +98,9 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@web-std/blob": "^3.0.4",
+    "@web-std/blob": "^3.0.3",
     "@web-std/form-data": "^3.0.2",
-    "@web-std/stream": "^1.0.3",
+    "@web-std/stream": "^1.0.1",
     "data-uri-to-buffer": "^3.0.1",
     "mrmime": "^1.0.0",
     "@web3-storage/multipart-parser": "^1.0.0"
