--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.0.0/schema.json",
   "changelog": [
     "@changesets/cli/changelog",
-    { "repo": "remix-run/web-std-io" }
+    { "repo": "web-std/io" }
   ],
   "commit": false,
   "fixed": [],
