--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -77,6 +77,8 @@
     "@types/mocha": "^9.1.0",
     "@types/chai-as-promised": "^7.1.5",
     "@types/chai-string": "^1.4.2",
+    "abort-controller": "^3.0.0",
+    "@web-std/file": "^3.0.2",
     "abortcontroller-polyfill": "^1.7.1",
     "busboy": "^0.3.1",
     "c8": "^7.3.0",
