--- a/packages/blob/package.json
+++ b/packages/blob/package.json
@@ -25,7 +25,7 @@
     }
   },
   "dependencies": {
-    "@web-std/stream": "1.0.2",
+    "@web-std/stream": "^1.0.3",
     "web-encoding": "1.1.5"
   },
   "author": "Irakli Gozalishvili <dev@gozala.io> (https://gozala.io)",
